--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
   padding: 20px;
 }
 
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+a:hover {
+  color: #333;
+}
+
 header, footer {
     background-color: #222;
     color: white;
@@ -28,7 +37,7 @@ header, footer {
   nav {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 15px;
   }
   
   ul {
